# rca_analysis

./: .gitignore  README.md  pyproject.toml  requirements.txt
config/: default.yaml
data/sample/: sku_monthly.csv
scripts/: run_rca.py
src/rca/: __init__.py  abnormality.py  contribution.py  diagnose.py  features.py  io.py  period.py  pipeline.py  priority.py  promotion.py  schema.py  trend.py
tests/: test_contribution.py  test_period.py  test_pipeline.py  test_priority.py
